--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,91 @@ nav {
         position: static;
         width: auto;
     }
+	.gallery-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+    flex-wrap:wrap;
+    padding: 10px;
+    gap:40px;
+}
+
+.gallery {
+    justify-content: space-between;
+    display: flex;
+    width: 33.33%;
+    padding: 0 5px;
+    overflow: hidden;
+    gap:40px;
+    width: 80vw; /* Adjust as needed */
+}
+
+.gallery figure {
+    max-width: 100%;
+    height: auto;
+    margin-right: 10px; /* Adjust spacing between images */
+    transition: transform 0.5s ease;
+    width: 100%;
+    max-width: 200px;
+    height: 150px;
+    justify-content: space-between;
+    gap:20px;
+    
+    object-fit: cover;
+    padding: 0 5px;
+}
+.gallery figure img{
+    border-radius: 8%;
+    height: auto;
+    margin-right: 1px; /* Adjust spacing between images */
+    transition: transform 0.5s ease;
+    max-width: 300px;
+    height: 200px;
+    justify-content: space-between;
+    gap:10px;
+    
+    object-fit: cover;
+    padding: 0 5px;
+}
+figcaption {
+    background-color: black;
+    color: white;
+    font-style: italic;
+    padding: 1px;
+    text-align: center;
+  }
+
+.move-left,
+.move-right {
+    background-color: #ec3b05;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.move-left:hover,
+.move-right:hover {
+    background-color: #00b318;
+}
+
+.move-left {
+    margin-right: auto;
+}
+
+.move-right {
+    margin-left: auto;
+}
+.right{
+    float: right;
+    border: 1px dotted rgb(130, 241, 3);
+  margin: 0px 0px 5px 10px;
+  width:290px;
+  height:130px;
+  
+}
     
 }
 
@@ -213,15 +298,91 @@ nav {
     .header-icons i {
         font-size: 16px;
     }
-    .gallery-container{
-        display: flex;
-        padding: 5px;
+  .gallery-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+    flex-wrap:wrap;
+    padding: 15px;
+    gap:40px;
+}
 
+.gallery {
+    justify-content: space-between;
+    display: flex;
+    width: 33.33%;
+    padding: 0 5px;
+    overflow: hidden;
+    gap:40px;
+    width: 80vw; /* Adjust as needed */
+}
 
-    }
-    .gallery{
-        width: 100%;
-    }
+.gallery figure {
+    max-width: 100%;
+    height: auto;
+    margin-right: 10px; /* Adjust spacing between images */
+    transition: transform 0.5s ease;
+    width: 100%;
+    max-width: 400px;
+    height: 300px;
+    justify-content: space-between;
+    gap:40px;
+    
+    object-fit: cover;
+    padding: 0 5px;
+}
+.gallery figure img{
+    border-radius: 8%;
+    height: auto;
+    margin-right: 1px; /* Adjust spacing between images */
+    transition: transform 0.5s ease;
+    max-width: 400px;
+    height: 300px;
+    justify-content: space-between;
+    gap:20px;
+    
+    object-fit: cover;
+    padding: 0 5px;
+}
+figcaption {
+    background-color: black;
+    color: white;
+    font-style: italic;
+    padding: 1px;
+    text-align: center;
+  }
+
+.move-left,
+.move-right {
+    background-color: #ec3b05;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.move-left:hover,
+.move-right:hover {
+    background-color: #00b318;
+}
+
+.move-left {
+    margin-right: auto;
+}
+
+.move-right {
+    margin-left: auto;
+}
+.right{
+    float: right;
+    border: 1px dotted rgb(130, 241, 3);
+  margin: 0px 0px 15px 20px;
+  width:590px;
+  height:430px;
+  
+}
 }
 
 .gallery-container {
