--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image:  linear-gradient(rgba(67, 177, 140, 0.65),rgba(164, 162, 175, 0.65)),url(/resources/a\ travel\ compan\ 411f0a58-530d-4fa9-9634-00f013bbb0e4.png);
+    background-image:  linear-gradient(rgba(67, 177, 140, 0.65),rgba(164, 162, 175, 0.65)),url(a\ travel\ compan\ 411f0a58-530d-4fa9-9634-00f013bbb0e4.png);
     background-size: cover;
     
 }
