--- a/styles.css
+++ b/styles.css
@@ -190,52 +190,18 @@ nav {
         position: static;
         width: auto;
     }
-	.gallery-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 20px;
-    flex-wrap:wrap;
-    padding: 10px;
-    gap:40px;
-}
-
-.gallery {
-    justify-content: space-between;
-    display: flex;
-    width: 33.33%;
-    padding: 0 5px;
-    overflow: hidden;
-    gap:40px;
-    width: 60vw; /* Adjust as needed */
+	.gallery {
+    gap:10px;
+    padding:5px; /* Adjust as needed */
 }
 
 .gallery figure {
-    max-width: 100%;
-    height: auto;
-    margin-right: 10px; /* Adjust spacing between images */
-    transition: transform 0.5s ease;
-    width: 100%;
-    max-width: 200px;
-    height: 150px;
-    justify-content: space-between;
-    gap:20px;
-    
-    object-fit: cover;
-    padding: 0 5px;
+    width:150px;
+	padding:5px;
 }
 .gallery figure img{
-    border-radius: 8%;
-    height: auto;
-    margin-right: 1px; /* Adjust spacing between images */
-    transition: transform 0.5s ease;
-    max-width: 300px;
-    height: 200px;
-    justify-content: space-between;
-    gap:10px;
-    
-    object-fit: cover;
+   width:150px;
+	border-radius:8%;
     padding: 0 5px;
 }
 figcaption {
@@ -298,19 +264,8 @@ figcaption {
     .header-icons i {
         font-size: 16px;
     }
-  .gallery-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 10px;
-    flex-wrap:wrap;
-    padding: 5px;
-    gap:10px;
-}
-
-.gallery {
-    justify-content: space-between;
+ .gallery {
+    
     display: flex;
     width: 33.33%;
     padding: 0 5px;
