--- a/styles.css
+++ b/styles.css
@@ -211,37 +211,6 @@ figcaption {
     padding: 1px;
     text-align: center;
   }
-
-.move-left,
-.move-right {
-    background-color: #ec3b05;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-}
-
-.move-left:hover,
-.move-right:hover {
-    background-color: #00b318;
-}
-
-.move-left {
-    margin-right: auto;
-}
-
-.move-right {
-    margin-left: auto;
-}
-.right{
-    float: right;
-    border: 1px dotted rgb(130, 241, 3);
-  margin: 0px 0px 5px 10px;
-  width:290px;
-  height:130px;
-  
-}
-    
 }
 
 @media (max-width: 480px) {
@@ -311,43 +280,7 @@ figcaption {
     font-style: italic;
     padding: 1px;
     text-align: center;
-  }
-
-.move-left,
-.move-right {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-   background-color: rgba(0, 0, 0, 0.2);*/
-   
-    color: #fff;
-    border:1px double #000;
-    border-width: thick ;
-    padding: 10px;
-    cursor: pointer;
-    border-radius:50%;
-
-}
-.move-left:hover,
-.move-right:hover {
-    background-color: #00b318;
-}
-
-.move-left {
-    margin-right: auto;
-}
-
-.move-right {
-    margin-left: auto;
-}
-.right{
-    float: right;
-    border: 1px dotted rgb(130, 241, 3);
-  /*margin: 0px 0px 5px 10px;*/
-  width:90px;
-  height:30px;
-  
-}
+  }   
 }
 
 .gallery-container {
@@ -406,9 +339,8 @@ figcaption {
     text-align: center;
   }
 
-.move-left,
-.move-right {
-     position: absolute;
+.prev, .next {
+    position: absolute;
     top: 50%;
     transform: translateY(-50%);
    background-color: rgba(0, 0, 0, 0.2);*/
@@ -421,25 +353,16 @@ figcaption {
     border-radius:50%;
 }
 
-.move-left:hover,
-.move-right:hover {
-    background-color: #00b318;
+.prev {
+    left: 0;
 }
 
-.move-left {
-    margin-right: auto;
+.next {
+    right: 0;
 }
 
-.move-right {
-    margin-left: auto;
-}
-.right{
-    float: right;
-    border: 1px dotted rgb(130, 241, 3);
-  /*margin: 0px 0px 15px 20px;*/
-  width:590px;
-  height:430px;
-  
+.prev:hover, .next:hover {
+    color :#008080;
 }
 hr{
     
