--- a/styles.css
+++ b/styles.css
@@ -284,6 +284,11 @@ figcaption {
 }
 
 .gallery-container {
+	 position: relative;
+    width: 90%;
+    margin: 20px auto;
+    overflow: hidden;
+    max-width:1200px;/*
     position: relative;
     display: flex;
     align-items: center;
@@ -291,7 +296,7 @@ figcaption {
     margin-top: 50px;
     flex-wrap:wrap;
     padding: 15px;
-    gap:40px;
+    gap:40px;*/
 }
 
 .gallery {
@@ -300,14 +305,19 @@ figcaption {
     width: 33.33%;
     padding:2px;
     overflow: hidden;
+	 transition: transform 0.5s ease;
     gap:20px;
     width: 50vw; /* Adjust as needed */
 }
 
 .gallery figure {
+	 min-width: 25%;
+    margin: 0 10px;
+    text-align: center;
+    box-sizing: border-box;/*
     max-width: 100%;
     height: auto;
-    margin-right: 10px; /* Adjust spacing between images */
+    margin-right: 10px; /* Adjust spacing between images 
     transition: transform 0.5s ease;
     width: 100%;
     max-width: 400px;
@@ -316,12 +326,12 @@ figcaption {
     gap:20px;
     
     object-fit: cover;
-    padding: 0 5px;
+    padding: 0 5px;*/
 }
 .gallery figure img{
-    border-radius: 8%;
+   /* border-radius: 8%;
     height: auto;
-    margin-right: 1px; /* Adjust spacing between images */
+    margin-right: 1px; /* Adjust spacing between images 
     transition: transform 0.5s ease;
     max-width: 400px;
     height: 300px;
@@ -329,7 +339,10 @@ figcaption {
     gap:20px;
     
     object-fit: cover;
-    padding: 0 5px;
+    padding: 0 5px;*/
+	 width: 100%;
+    height: auto;
+    border:2px solid #000;
 }
 figcaption {
     background-color: black;
