--- a/styles.css
+++ b/styles.css
@@ -288,7 +288,7 @@ figcaption {
     width: 90%;
     margin: 20px auto;
     overflow: hidden;
-    max-width:1200px;/*
+    max-width:1200px;
     position: relative;
     display: flex;
     align-items: center;
@@ -314,10 +314,10 @@ figcaption {
 	 min-width: 25%;
     margin: 0 10px;
     text-align: center;
-    box-sizing: border-box;/*
+    box-sizing: border-box;
     max-width: 100%;
     height: auto;
-    margin-right: 10px; /* Adjust spacing between images 
+    margin-right: 10px;  Adjust spacing between images 
     transition: transform 0.5s ease;
     width: 100%;
     max-width: 400px;
@@ -326,12 +326,12 @@ figcaption {
     gap:20px;
     
     object-fit: cover;
-    padding: 0 5px;*/
+    padding: 0 5px;
 }
 .gallery figure img{
-   /* border-radius: 8%;
+    border-radius: 8%;
     height: auto;
-    margin-right: 1px; /* Adjust spacing between images 
+    margin-right: 1px; /* Adjust spacing between images */
     transition: transform 0.5s ease;
     max-width: 400px;
     height: 300px;
@@ -339,7 +339,7 @@ figcaption {
     gap:20px;
     
     object-fit: cover;
-    padding: 0 5px;*/
+    padding: 0 5px;
 	 width: 100%;
     height: auto;
     border:2px solid #000;
