--- a/styles.css
+++ b/styles.css
@@ -445,3 +445,31 @@ footer {
     margin-right: 10px;
     color: #000;
 }
+.gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container {
+  display: flex;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+.image-container img {
+  flex: 0 0 auto;
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+  margin: 0 10px;
+}
+
+.prev-btn,
+.next-btn {
+  font-size: 24px;
+  padding: 10px;
+  background-color: #f2f2f2;
+  border: none;
+  cursor: pointer;
+}
