--- a/styles.css
+++ b/styles.css
@@ -445,19 +445,19 @@ footer {
     margin-right: 10px;
     color: #000;
 }
-.gallery {
+.galery {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.image-container figure {
+.imae-container figure {
   display: flex;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
-.image-container figure img {
+.imae-container figure img {
   flex: 0 0 auto;
   width: 300px;
   height: 200px;
