--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ nav {
     .header-icons i {
         font-size: 16px;
     }
-    .gallery-container{
+/*     .gallery-container{
         display: flex;
         padding: 5px;
 
@@ -243,7 +243,7 @@ nav {
     overflow: hidden;
     gap:40px;
     width: 80vw; /* Adjust as needed */
-}
+} */
 
 .gallery figure {
     max-width: 100%;
