--- a/styles.css
+++ b/styles.css
@@ -490,3 +490,45 @@ footer {
 .btn:hover::before {
   box-shadow: inset 0 0 0 10em rgb(255, 0, 0);
 }
+
+
+
+	.image-gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding: 20px;
+}
+
+.image-container {
+    overflow: hidden;
+}
+
+.gallery-image {
+    width: 100%;
+    height: auto;
+    display: block;
+    transition: transform 0.3s ease-in-out;
+}
+
+.gallery-image:hover {
+    transform: scale(1.1);
+}
+
+@media screen and (min-width: 768px) {
+    .image-gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .image-gallery {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
+
+    .image-container {
+        flex: 0 0 calc(25% - 15px);
+    }
+}
