--- a/styles.css
+++ b/styles.css
@@ -329,9 +329,8 @@ hr{
 
 
 footer {
-    background;red;
-    background: -moz-linear-gradient(red,blue,gree);
-    background: -webkit-linear-gradient(red,green,blue);
+    background-color;green;
+    
     padding: 20px 0;
 }
 
