--- a/styles.css
+++ b/styles.css
@@ -490,7 +490,11 @@ footer {
   box-shadow: inset 0 0 0 10em rgb(255, 0, 0);
 }
 
-
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 	.image-gallery {
     display: grid;
